# CTU_autonomous-_robotics

./: .gitignore
aro_scan/: CMakeLists.txt  package.xml
aro_scan/launch/: aro_scan.launch
aro_scan/src/: scancollector.py
hw_02_random_walk/aro_robocop/scripts/: robocop.py
hw_03_pkgs/aro_localization/: CMakeLists.txt  README.md  dependencies.rosinstall  package.xml  setup.py
hw_03_pkgs/aro_localization/config/: costs.yaml  costs_icp.yaml  detector_easy.yaml  detector_hard.yaml  detector_medium.yaml  solver.yaml
hw_03_pkgs/aro_localization/launch/: apriltags_infra.launch  apriltags_rgb.launch  aro_loc.launch  aro_loc_sim.launch  record.launch  rviz.launch  sim.launch
hw_03_pkgs/aro_localization/rviz/: rviz.rviz
hw_03_pkgs/aro_localization/scripts/: aro_localization
hw_03_pkgs/aro_localization/src/aro_localization/: factor_graph.py  utils.py
hw_03_pkgs/aro_sim/config/: onlysim.rviz
hw_03_pkgs/aro_sim/config/marker_poses/aro_maze_1/: 1.launch  2.launch  4.launch
hw_03_pkgs/aro_sim/config/marker_poses/aro_maze_8/: 3.launch
hw_03_pkgs/aro_sim/config/marker_poses/house/: 1.launch  2.launch  3.launch
hw_03_pkgs/aro_sim/config/marker_poses/stage_3/: 3.launch
hw_03_pkgs/aro_sim/launch/: onlysim.launch  turtlebot3.launch
hw_03_pkgs/aro_sim/scripts/: visualize_odom
hw_03_pkgs/aro_slam/: CMakeLists.txt  dependencies.rosinstall
hw_03_pkgs/aro_slam/launch/: aro_slam.launch  icp_slam.launch  occupancy_mapper.launch  scan_to_cloud.launch  sim.launch
hw_03_pkgs/aro_slam/scripts/: icp_slam
hw_03_pkgs/aro_slam/src/aro_slam/: clouds.py  icp.py  io.py  occupancy.py  utils.py
hw_04_icp/aro_sim/: package.xml
hw_04_icp/aro_sim/launch/: sim_with_markers.launch
hw_04_icp/aro_sim/urdf/: turtlebot3_burger_rgbd.gazebo.xacro  turtlebot3_waffle.gazebo.xacro
hw_04_icp/aro_slam/: package.xml
hw_04_icp/aro_slam/launch/: aro_slam.launch  icp_slam.launch  occupancy_mapper.launch  sim.launch  tf_metrics.launch
hw_04_icp/aro_slam/scripts/: cloud_filter  icp_slam  occupancy_mapper
hw_04_icp/aro_slam/src/aro_slam/: __init__.py  compat.py  icp.py  io.py  utils.py
hw_05_path_planning/aro_msgs/action/: FollowPath.action
hw_05_path_planning/aro_planning/: test.py
hw_05_path_planning/aro_planning/config/: vis.rviz
hw_05_path_planning/aro_planning/launch/: planner.launch
hw_05_path_planning/aro_planning/scripts/: planner.py
hw_06_path_following/aro_control/config/: control.yaml
hw_06_path_following/aro_control/launch/: control.launch  evaluation.launch  onlysim.launch
hw_06_path_following/aro_control/rviz/: control.rviz
hw_06_path_following/aro_control/scripts/: path_follower.py  path_follower_evaluator.py
hw_06_path_following/aro_control/tmux_scripts/: .tmuxinator.yml
hw_07_frontier_detection/aro_frontier/: CMakeLists.txt
hw_07_frontier_detection/aro_frontier/launch/: frontier.launch
hw_07_frontier_detection/aro_frontier/scripts/: frontier.py
hw_07_frontier_detection/aro_frontier/tmux_scripts/: session.yml
lab01/: CMakeLists.txt  package.xml
lab01/launch/: lab01_demo.launch
lab01/msg/: AROMessage.msg
lab01/src/: publisher.py  subscriber.py
lab02/aro_robocop_keyboard/: CMakeLists.txt  package.xml
lab02/aro_robocop_keyboard/launch/: robocop_keyboard.launch
lab02/aro_robocop_keyboard/scripts/: robocop_keyboard_control.py
lab03/aro_robocop_goto_as/: CMakeLists.txt  package.xml
lab03/aro_robocop_goto_as/action/: GoToPosition.action
lab03/aro_robocop_goto_as/launch/: robocop_goto_as.launch
lab03/aro_robocop_goto_as/scripts/: robocop_goto_as.py  robocop_rviz_goto_ac.py
lab05/: icp.ipynb
semestral_packages/aro_evaluathor/: CMakeLists.txt
semestral_packages/aro_evaluathor/launch/: eval_world.launch
semestral_packages/aro_evaluathor/marker_gt/aro_maze_8/: 1.txt  2.txt
semestral_packages/aro_evaluathor/marker_gt/stage_3/: 1.txt
semestral_packages/aro_evaluathor/marker_gt/stage_4/: 1.txt
semestral_packages/aro_evaluathor/scripts/: run_eval.py
semestral_packages/aro_evaluathor/src/aro_evaluathor/: utils.py
semestral_packages/aro_exploration/launch/: exploration.launch  rviz.rviz
semestral_packages/aro_exploration/scripts/: explorer.py
semestral_packages/aro_sim/: CMakeLists.txt  dependencies.rosinstall
semestral_packages/aro_sim/config/init_poses/: aro_maze_8.txt  stage_3.txt  stage_4.txt
semestral_packages/aro_sim/launch/: sim_with_markers.launch  turtlebot3.launch
(+18 files in other folders)
