<?xml version="1.0"?>
<package format="2">
  <name>lab01_package</name>
  <version>0.0.0</version>
  <description>ARO Lab 01 package</description>

  <maintainer email="whoever@cvut.cz">whoever</maintainer>

  <license>whatever</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
